@@ -1,3 +1,8 @@
+2002-08-27  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c: Fixed a couple of minor memoryleaks in color
+	  allocation with valgrind after a tips from Anthony J Bybell.
+
 2002-08-10  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerbv.c, src/Makefile.am, files2tag.txt modified, 
